--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="max-w-7xl mx-auto px-4 text-center">
             <div class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full bg-slate-900 border border-teal-500/30 text-teal-300 text-xs font-bold uppercase tracking-wide mb-6">
                 <span class="w-2 h-2 rounded-full bg-teal-400 animate-pulse"></span>
-                Tokper Id Official Pricelist
+                Tokper Id Official Website
             </div>
             <h1 class="text-4xl md:text-7xl font-extrabold text-white tracking-tight mb-6 leading-tight">
                 Solusi Premium <br>
@@ -515,4 +515,5 @@
         });
     </script>
 </body>
+
 </html>
