--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Netflix Premium</h3>
-                            <img src="https://cdn.simpleicons.org/netflix/E50914" class="w-6 h-6" alt="Netflix">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/tv.svg" class="w-5 h-5 text-red-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">15k</span></li>
@@ -171,7 +171,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Viu Premium</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Viu_logo.svg" class="w-8 h-auto" alt="Viu">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/play.svg" class="w-5 h-5 text-yellow-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Private 1 Bulan</span><span class="font-bold text-teal-300">15k</span></li>
@@ -190,7 +190,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">WeTV VIP</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WeTV_logo.svg" class="w-8 h-auto" alt="WeTV">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/clapperboard.svg" class="w-5 h-5 text-orange-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">18k</span></li>
@@ -208,7 +208,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Disney+ Hotstar</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_Hotstar_logo.svg" class="w-10 h-auto" alt="Disney+ Hotstar">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/film.svg" class="w-5 h-5 text-blue-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">32k</span></li>
@@ -226,7 +226,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Vidio Premier</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Vidio_logo_2023.svg" class="w-8 h-auto" alt="Vidio">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/monitor-play.svg" class="w-5 h-5 text-pink-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400 text-xs">Platinum+F1+Italy 1 Bulan</span><span class="font-bold text-teal-300">55k</span></li>
@@ -244,7 +244,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Prime Video</h3>
-                            <img src="https://cdn.simpleicons.org/primevideo/00A8E1" class="w-8 h-auto" alt="Prime Video">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/video.svg" class="w-5 h-5 text-blue-400">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">20k</span></li>
@@ -262,7 +262,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Youtube Prem</h3>
-                            <img src="https://cdn.simpleicons.org/youtube/FF0000" class="w-6 h-6" alt="Youtube">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/youtube.svg" class="w-5 h-5 text-red-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Email Customer 1 Bulan</span><span class="font-bold text-teal-300">10k</span></li>
@@ -280,7 +280,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Iqiyi VIP</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/IQiyi_logo.svg" class="w-8 h-auto" alt="iQIYI">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/smartphone.svg" class="w-5 h-5 text-green-400">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing HP 1 Bulan</span><span class="font-bold text-teal-300">13k</span></li>
@@ -299,7 +299,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">HBO GO</h3>
-                            <img src="https://cdn.simpleicons.org/hbo/FFFFFF" class="w-8 h-auto" alt="HBO GO">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/tv-2.svg" class="w-5 h-5 text-slate-300">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Mobile 1 Bulan</span><span class="font-bold text-teal-300">25k</span></li>
@@ -317,7 +317,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Vision+</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Vision_Plus_logo.svg" class="w-8 h-auto" alt="Vision+">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/tv.svg" class="w-5 h-5 text-cyan-600">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">20k</span></li>
@@ -335,7 +335,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Bstation</h3>
-                            <img src="https://cdn.simpleicons.org/bilibili/00A1D6" class="w-6 h-6" alt="Bstation">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/play-square.svg" class="w-5 h-5 text-pink-400">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">13k</span></li>
@@ -353,7 +353,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Youku</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Youku_logo.svg" class="w-8 h-auto" alt="Youku">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/play-circle.svg" class="w-5 h-5 text-blue-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">13k</span></li>
@@ -371,7 +371,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Loklok</h3>
-                            <img src="https://play-lh.googleusercontent.com/G6Bf9k7s_g6Zq8Xg0f5R7q5H9_h4f9t3s8d2c6g5h8j4k6m5n3p2q1r4s7t8u9v0w" class="w-7 h-7 rounded-lg" alt="Loklok">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/film.svg" class="w-5 h-5 text-yellow-600">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing HP 1 Bulan</span><span class="font-bold text-teal-300">25k</span></li>
@@ -389,7 +389,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Spotify Prem</h3>
-                            <img src="https://cdn.simpleicons.org/spotify/1DB954" class="w-6 h-6" alt="Spotify">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/music.svg" class="w-5 h-5 text-green-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Family Plan 1 Bulan</span><span class="font-bold text-teal-300">30k</span></li>
@@ -407,7 +407,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Apple Music</h3>
-                            <img src="https://cdn.simpleicons.org/applemusic/FA243C" class="w-6 h-6" alt="Apple Music">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/music-2.svg" class="w-5 h-5 text-pink-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Gift Code 1-2 Bulan</span><span class="font-bold text-teal-300">18k</span></li>
@@ -425,7 +425,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Canva Pro</h3>
-                            <img src="https://cdn.simpleicons.org/canva/00C4CC" class="w-6 h-6" alt="Canva">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/palette.svg" class="w-5 h-5 text-cyan-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">1 Bulan (Email Customer)</span><span class="font-bold text-teal-300">8k</span></li>
@@ -443,7 +443,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">CapCut Pro</h3>
-                            <img src="https://cdn.simpleicons.org/capcut/FFFFFF" class="w-6 h-6" alt="CapCut">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/scissors.svg" class="w-5 h-5 text-gray-400">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">1 Bulan</span><span class="font-bold text-teal-300">20k</span></li>
@@ -461,7 +461,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">GetContact</h3>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Getcontact_logo.png" class="w-7 h-auto" alt="GetContact">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/phone.svg" class="w-5 h-5 text-blue-700">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Premium 1 Bulan</span><span class="font-bold text-teal-300">15k</span></li>
@@ -478,7 +478,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">VSCO</h3>
-                            <img src="https://cdn.simpleicons.org/vsco/FFFFFF" class="w-6 h-6" alt="VSCO">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/camera.svg" class="w-5 h-5 text-slate-500">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Fullpack 1 Tahun</span><span class="font-bold text-teal-300">45k</span></li>
