--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="max-w-7xl mx-auto px-4 text-center">
             <div class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full bg-slate-900 border border-teal-500/30 text-teal-300 text-xs font-bold uppercase tracking-wide mb-6">
                 <span class="w-2 h-2 rounded-full bg-teal-400 animate-pulse"></span>
-                Tokper Id Official Pricelist
+                Tokper Id Official Website
             </div>
             <h1 class="text-4xl md:text-7xl font-extrabold text-white tracking-tight mb-6 leading-tight">
                 Solusi Premium <br>
@@ -109,21 +109,21 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="bg-slate-900 p-8 rounded-2xl border border-slate-800 hover:border-teal-500/50 transition-all group hover:-translate-y-1">
                     <div class="w-12 h-12 bg-slate-800 rounded-lg flex items-center justify-center mb-6 group-hover:bg-teal-900/30 border border-slate-700 transition-colors">
-                        <img src="https://unpkg.com/lucide-static@latest/icons/shield-check.svg" class="w-6 h-6 text-teal-500">
+                        <img src="https://unpkg.com/lucide-static@latest/icons/shield-check.svg" class="w-6 h-6 text-white">
                     </div>
                     <h3 class="text-xl font-bold text-white mb-3">Full Garansi</h3>
                     <p class="text-slate-400 text-sm leading-relaxed">Semua produk bergaransi aktif. Jika ada kendala, admin siap membantu perbaikan atau ganti baru.</p>
                 </div>
                 <div class="bg-slate-900 p-8 rounded-2xl border border-slate-800 hover:border-teal-500/50 transition-all group hover:-translate-y-1">
                     <div class="w-12 h-12 bg-slate-800 rounded-lg flex items-center justify-center mb-6 group-hover:bg-teal-900/30 border border-slate-700 transition-colors">
-                        <img src="https://unpkg.com/lucide-static@latest/icons/clock.svg" class="w-6 h-6 text-teal-500">
+                        <img src="https://unpkg.com/lucide-static@latest/icons/clock.svg" class="w-6 h-6 text-white">
                     </div>
                     <h3 class="text-xl font-bold text-white mb-3">Proses Cepat</h3>
                     <p class="text-slate-400 text-sm leading-relaxed">Order diproses segera (5-15 menit) pada jam operasional (09:00 - 22:00). Tidak pakai lama.</p>
                 </div>
                 <div class="bg-slate-900 p-8 rounded-2xl border border-slate-800 hover:border-teal-500/50 transition-all group hover:-translate-y-1">
                     <div class="w-12 h-12 bg-slate-800 rounded-lg flex items-center justify-center mb-6 group-hover:bg-teal-900/30 border border-slate-700 transition-colors">
-                        <img src="https://unpkg.com/lucide-static@latest/icons/wallet.svg" class="w-6 h-6 text-teal-500">
+                        <img src="https://unpkg.com/lucide-static@latest/icons/wallet.svg" class="w-6 h-6 text-white">
                     </div>
                     <h3 class="text-xl font-bold text-white mb-3">Harga Termurah</h3>
                     <p class="text-slate-400 text-sm leading-relaxed">Dapatkan harga pelajar/mahasiswa yang jauh lebih hemat dibandingkan langganan langsung.</p>
@@ -151,7 +151,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Netflix Premium</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/tv.svg" class="w-5 h-5 text-red-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/tv.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">15k</span></li>
@@ -171,7 +171,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Viu Premium</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/play.svg" class="w-5 h-5 text-yellow-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/play.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Private 1 Bulan</span><span class="font-bold text-teal-300">15k</span></li>
@@ -190,7 +190,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">WeTV VIP</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/clapperboard.svg" class="w-5 h-5 text-orange-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/clapperboard.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">18k</span></li>
@@ -208,7 +208,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Disney+ Hotstar</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/film.svg" class="w-5 h-5 text-blue-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/film.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">32k</span></li>
@@ -226,7 +226,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Vidio Premier</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/monitor-play.svg" class="w-5 h-5 text-pink-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/monitor-play.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400 text-xs">Platinum+F1+Italy 1 Bulan</span><span class="font-bold text-teal-300">55k</span></li>
@@ -244,7 +244,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Prime Video</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/video.svg" class="w-5 h-5 text-blue-400">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/video.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">20k</span></li>
@@ -262,7 +262,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Youtube Prem</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/youtube.svg" class="w-5 h-5 text-red-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/youtube.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Email Customer 1 Bulan</span><span class="font-bold text-teal-300">10k</span></li>
@@ -280,7 +280,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Iqiyi VIP</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/smartphone.svg" class="w-5 h-5 text-green-400">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/smartphone.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing HP 1 Bulan</span><span class="font-bold text-teal-300">13k</span></li>
@@ -299,7 +299,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">HBO GO</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/tv-2.svg" class="w-5 h-5 text-slate-300">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/tv-2.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Mobile 1 Bulan</span><span class="font-bold text-teal-300">25k</span></li>
@@ -317,7 +317,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Vision+</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/tv.svg" class="w-5 h-5 text-cyan-600">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/tv.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">20k</span></li>
@@ -335,7 +335,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Bstation</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/play-square.svg" class="w-5 h-5 text-pink-400">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/play-square.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">13k</span></li>
@@ -353,7 +353,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Youku</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/play-circle.svg" class="w-5 h-5 text-blue-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/play-circle.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing 1 Bulan</span><span class="font-bold text-teal-300">13k</span></li>
@@ -371,7 +371,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Loklok</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/film.svg" class="w-5 h-5 text-yellow-600">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/film.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                              <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Sharing HP 1 Bulan</span><span class="font-bold text-teal-300">25k</span></li>
@@ -389,7 +389,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Spotify Prem</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/music.svg" class="w-5 h-5 text-green-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/music.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Family Plan 1 Bulan</span><span class="font-bold text-teal-300">30k</span></li>
@@ -407,7 +407,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Apple Music</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/music-2.svg" class="w-5 h-5 text-pink-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/music-2.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Gift Code 1-2 Bulan</span><span class="font-bold text-teal-300">18k</span></li>
@@ -425,7 +425,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">Canva Pro</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/palette.svg" class="w-5 h-5 text-cyan-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/palette.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">1 Bulan (Email Customer)</span><span class="font-bold text-teal-300">8k</span></li>
@@ -443,7 +443,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">CapCut Pro</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/scissors.svg" class="w-5 h-5 text-gray-400">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/scissors.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">1 Bulan</span><span class="font-bold text-teal-300">20k</span></li>
@@ -461,7 +461,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">GetContact</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/phone.svg" class="w-5 h-5 text-blue-700">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/phone.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Premium 1 Bulan</span><span class="font-bold text-teal-300">15k</span></li>
@@ -478,7 +478,7 @@
                     <div class="p-5">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-bold text-white">VSCO</h3>
-                            <img src="https://unpkg.com/lucide-static@latest/icons/camera.svg" class="w-5 h-5 text-slate-500">
+                            <img src="https://unpkg.com/lucide-static@latest/icons/camera.svg" class="w-5 h-5 text-white">
                         </div>
                         <ul class="space-y-3 text-sm">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span class="text-slate-400">Fullpack 1 Tahun</span><span class="font-bold text-teal-300">45k</span></li>
