--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <div class="p-6">
                         <div class="flex justify-between items-start mb-6">
                             <div>
-                                <h3 class="text-xl font-bold text-white tracking-wide">Youtube Prem</h3>
+                                <h3 class="text-xl font-bold text-white tracking-wide">Youtube Premium</h3>
                                 <p class="text-xs text-red-400 font-mono mt-1">NO ADS</p>
                             </div>
                             <div class="p-2 bg-white/5 rounded-lg border border-white/10">
@@ -482,7 +482,7 @@
                     <div class="p-6">
                         <div class="flex justify-between items-start mb-6">
                             <div>
-                                <h3 class="text-xl font-bold text-white tracking-wide">Spotify Prem</h3>
+                                <h3 class="text-xl font-bold text-white tracking-wide">Spotify Premium</h3>
                                 <p class="text-xs text-green-400 font-mono mt-1">AUDIO STREAM</p>
                             </div>
                             <div class="p-2 bg-white/5 rounded-lg border border-white/10">
@@ -737,4 +737,5 @@
     </script>
 </body>
 </html>
+
 
